[gd_scene load_steps=28 format=2]

[ext_resource path="res://Materials/BasicWall.tres" type="Material" id=1]
[ext_resource path="res://Materials/BasicFloor.tres" type="Material" id=2]
[ext_resource path="res://Scripts/Rooms/RoomKey.gd" type="Script" id=3]
[ext_resource path="res://Assets/Drops/Key.png" type="Texture" id=4]
[ext_resource path="res://Materials/Black.tres" type="Material" id=5]

[sub_resource type="CubeMesh" id=1]
material = ExtResource( 2 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=3]
material = ExtResource( 5 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="CubeMesh" id=5]
material = ExtResource( 5 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 2, 1 )

[sub_resource type="CubeMesh" id=8]
material = ExtResource( 1 )
size = Vector3( 2, 2, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 2, 2 )

[sub_resource type="CubeMesh" id=10]
material = ExtResource( 1 )
size = Vector3( 1, 2, 3 )

[sub_resource type="CubeMesh" id=11]
material = ExtResource( 1 )
size = Vector3( 2, 1, 1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 2, 1 )

[sub_resource type="CubeMesh" id=13]
material = ExtResource( 1 )
size = Vector3( 2, 2, 1 )

[sub_resource type="CubeMesh" id=14]
material = ExtResource( 1 )
size = Vector3( 1, 2, 2 )

[sub_resource type="CubeMesh" id=15]
material = ExtResource( 1 )
size = Vector3( 2, 1, 1 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 1, 2, 0.2 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.2, 2, 1 )

[sub_resource type="BoxShape" id=18]
extents = Vector3( 0.2, 2, 1 )

[sub_resource type="BoxShape" id=19]
extents = Vector3( 3, 2, 3 )

[sub_resource type="CylinderShape" id=20]
radius = 0.3
height = 1.0

[sub_resource type="Animation" id=21]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, 0 ), Vector3( 0, 0.6, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeySprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -360, 0 ), Vector3( 0, -720, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KeySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 6, 6, 0.999999 ), Vector3( 0.1, 0.1, 1 ) ]
}

[sub_resource type="Animation" id=22]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.2, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.2, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeySprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.2, 2, 2.5, 3.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -45, 0 ), Vector3( 0, -135, 0 ), Vector3( 0, -180, 0 ), Vector3( 0, -225, 0 ), Vector3( 0, -315, 0 ), Vector3( 0, -360, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KeySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 6, 6, 1 ) ]
}

[node name="RoomKey" type="Spatial"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Platforms" type="Spatial" parent="."]

[node name="Platform" type="StaticBody" parent="Platforms"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, 0, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Platforms/Platform"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Platform"]
shape = SubResource( 2 )

[node name="Platform2" type="StaticBody" parent="Platforms"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 5 )

[node name="MeshInstance" type="MeshInstance" parent="Platforms/Platform2"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Platform2"]
shape = SubResource( 4 )

[node name="Platform4" type="StaticBody" parent="Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 6, 5, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Platforms/Platform4"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Platform4"]
shape = SubResource( 4 )

[node name="Platform3" type="StaticBody" parent="Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 6, -5, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Platforms/Platform3"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Platform3"]
shape = SubResource( 4 )

[node name="Platform6" type="StaticBody" parent="Platforms"]
transform = Transform( 14, 0, 0, 0, 8, 0, 0, 0, 1, 0, 2, -10 )

[node name="MeshInstance" type="MeshInstance" parent="Platforms/Platform6"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Platform6"]
shape = SubResource( 6 )

[node name="BasicWalls" type="Spatial" parent="."]

[node name="Wall1" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -4 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5 )
mesh = SubResource( 8 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -4 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5 )
mesh = SubResource( 8 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -3 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0.5 )
mesh = SubResource( 10 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 3 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5 )
mesh = SubResource( 10 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 11 )
material/0 = null

[node name="Wall7" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -3 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.5 )
mesh = SubResource( 10 )
material/0 = null

[node name="Wall8" type="StaticBody" parent="BasicWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 3 )

[node name="CollisionShape" type="CollisionShape" parent="BasicWalls/Wall8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="TempMesh" type="MeshInstance" parent="BasicWalls/Wall8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5 )
mesh = SubResource( 10 )
material/0 = null

[node name="FillWalls" type="Spatial" parent="."]

[node name="WallUp" type="StaticBody" parent="FillWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="FillWalls/WallUp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 12 )
disabled = true

[node name="TempMesh" type="MeshInstance" parent="FillWalls/WallUp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5 )
mesh = SubResource( 13 )
material/0 = null

[node name="WallLeft" type="StaticBody" parent="FillWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="FillWalls/WallLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 12 )
disabled = true

[node name="TempMesh" type="MeshInstance" parent="FillWalls/WallLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="WallRight" type="StaticBody" parent="FillWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="FillWalls/WallRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 12 )
disabled = true

[node name="TempMesh" type="MeshInstance" parent="FillWalls/WallRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="WallDown" type="StaticBody" parent="FillWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="FillWalls/WallDown"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 12 )
disabled = true

[node name="TempMesh" type="MeshInstance" parent="FillWalls/WallDown"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 15 )
material/0 = null

[node name="DoorAreas" type="Spatial" parent="."]

[node name="DoorUp" type="Area" parent="DoorAreas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreas/DoorUp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.75 )
shape = SubResource( 16 )

[node name="DoorDown" type="Area" parent="DoorAreas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreas/DoorDown"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.75 )
shape = SubResource( 16 )

[node name="DoorLeft" type="Area" parent="DoorAreas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreas/DoorLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 1, 0 )
shape = SubResource( 17 )

[node name="DoorRight" type="Area" parent="DoorAreas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreas/DoorRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 1, 0 )
shape = SubResource( 18 )

[node name="DoorAreasBuffer" type="Spatial" parent="."]

[node name="DoorUpBuffer" type="Area" parent="DoorAreasBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreasBuffer/DoorUpBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1 )
shape = SubResource( 19 )

[node name="DoorDownBuffer" type="Area" parent="DoorAreasBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreasBuffer/DoorDownBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
shape = SubResource( 19 )

[node name="DoorLeftBuffer" type="Area" parent="DoorAreasBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreasBuffer/DoorLeftBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95, 1, 0 )
shape = SubResource( 19 )

[node name="DoorRightBuffer" type="Area" parent="DoorAreasBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DoorAreasBuffer/DoorRightBuffer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95, 1, 0 )
shape = SubResource( 19 )

[node name="KeyArea" type="Area" parent="." groups=[
"Key",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="KeyArea"]
shape = SubResource( 20 )

[node name="KeySprite" type="Sprite3D" parent="KeyArea"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 0.999999, 0, 0.1, 0 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KeyArea"]
autoplay = "KeyIdle"
anims/KeyAquired = SubResource( 21 )
anims/KeyIdle = SubResource( 22 )

[connection signal="body_entered" from="DoorAreas/DoorUp" to="." method="_on_DoorUp_body_entered"]
[connection signal="body_entered" from="DoorAreas/DoorDown" to="." method="_on_DoorDown_body_entered"]
[connection signal="body_entered" from="DoorAreas/DoorLeft" to="." method="_on_DoorLeft_body_entered"]
[connection signal="body_entered" from="DoorAreas/DoorRight" to="." method="_on_DoorRight_body_entered"]
[connection signal="body_entered" from="DoorAreasBuffer/DoorUpBuffer" to="." method="_on_DoorUpBuffer_body_entered"]
[connection signal="body_entered" from="DoorAreasBuffer/DoorDownBuffer" to="." method="_on_DoorDownBuffer_body_entered"]
[connection signal="body_entered" from="DoorAreasBuffer/DoorLeftBuffer" to="." method="_on_DoorLeftBuffer_body_entered"]
[connection signal="body_entered" from="DoorAreasBuffer/DoorRightBuffer" to="." method="_on_DoorRightBuffer_body_entered"]
[connection signal="body_entered" from="KeyArea" to="." method="_on_KeyArea_body_entered"]
[connection signal="animation_finished" from="KeyArea/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
